--- a/index.html
+++ b/index.html
@@ -1,79 +1,211 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Cse523 : Network Analytics Visulaizations">
+<head>
+<meta charset='utf-8'>
+<meta http-equiv="X-UA-Compatible" content="chrome=1">
+<meta name="description"
+	content="Cse523 : Network Analytics Visulaizations">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+<link rel="stylesheet" type="text/css" media="screen"
+	href="stylesheets/stylesheet.css">
 
-    <title>Cse523</title>
-  </head>
+<title>Cse523</title>
 
-  <body>
+<style>
+#map-canvas {
+	height: 700px;
+	width: 1024px;
+	margin-left: auto;
+	margin-right: auto;
+	border: 1px solid #ccc;
+	background-color: #f3f3f3;
+	margin-right: auto;
+}
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/nikhilambekar/CSE523">View on GitHub</a>
+#chart1 {
+	height: 500px;
+	width: 1100px;
+	margin-left: auto;
+	margin-right: auto;
+}
 
-          <h1 id="project_title">Cse523</h1>
-          <h2 id="project_tagline">Network Analytics Visulaizations</h2>
+.map {
+	background: #fff;
+	padding: 15px;
+	box-shadow: 0 0 20px #999;
+	border-radius: 2px;
+}
+</style>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/nikhilambekar/CSE523/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/nikhilambekar/CSE523/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+<link href="stylesheets/nv.d3.css" rel="stylesheet">
+<script type="text/javascript" src="javascripts/jquery-1.11.2.min.js"></script>
+<script type="text/javascript" src="javascripts/jquery.sparkline.min.js"></script>
+<script type="text/javascript" src="javascripts/jquery.outerhtml.js"></script>
+<script type="text/javascript" src="javascripts/papaparse.js"></script>
+<script type="text/javascript" src="javascripts/markerclusterer_compiled.js"></script>
+<script src="http://d3js.org/d3.v3.min.js"></script>
+<script type="text/javascript" src="javascripts/stream_layers.js"></script>
+<script type="text/javascript" src="javascripts/nv.d3.js"></script>
+<script type="text/javascript">
+	$(function() {
+		/** This code runs when everything has been loaded on the page */
+		/* Inline sparklines take their values from the contents of the tag */
+		$('.inlinesparkline').sparkline();
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+		/* Sparklines can also take their values from the first argument 
+		passed to the sparkline() function */
+		var myvalues = [ 10, 8, 5, 7, 4, 4, 1, 4, 4, 7, 5, 9, 10 ];
+		$('.dynamicsparkline').sparkline(myvalues);
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+		/* The second argument gives options such as chart type */
+		$('.dynamicbar').sparkline(myvalues, {
+			type : 'bar',
+			barColor : 'green'
+		});
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+		/* Use 'html' instead of an array of values to pass options 
+		to a sparkline with data in the tag */
+		$('.inlinebar').sparkline('html', {
+			type : 'bar',
+			barColor : 'red'
+		});
+	});
+</script>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<script
+	src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=visualization"></script>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+</head>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<body>
 
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+	<!-- HEADER -->
+	<div id="header_wrap" class="outer">
+		<header class="inner">
+			<a id="forkme_banner" href="https://github.com/nikhilambekar/CSE523">View
+				on GitHub</a>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+			<h1 id="project_title">Cse523</h1>
+			<h2 id="project_tagline">Network Analytics Visulaizations</h2>
+		</header>
+	</div>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+	<!-- MAIN CONTENT -->
+	<div id="main_content_wrap" class="outer">
+		<section id="main_content" class="inner">
+			<span class="inlinesparkline">1,4,4,7,5,9,10,4,4,7,5,9,10,4,4,7,5,9,10</span>
+	<span class="dynamicsparkline">Loading..</span>
+	<span class="dynamicbar">Loading..</span>
+	<span class="inlinebar">1,3,4,5,3,5,4,4,7,5,9,10,4,4,7,5,9,10</span>
+	<div id='chart1'>
+		<svg style='height:500px;width: 1100px;'> </svg>
+	</div>
+	<script src='javascripts/multiBar.js' type='text/javascript'>
+		
+	</script>
+	<div id='map'>
+		<div id='map-canvas'></div>
+	</div>
+	<script type="text/javascript">
+		var map, heatmap;
+		var pointArray = [[]];
+		var taxiData = new Array();
+		function doStuff(data, loadMap) {
+			pointArray = data.slice();
+			
+			loadMap();
+		}
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+		function parseData(url, callBack) {
+			Papa.parse(url, {
+				download : true,
+				dynamicTyping : true,
+				complete : function(results) {
+					callBack(results.data, loadMap);
+				}
+			});
+		}
+		
+		function Create2DArray(rows) {
+			  var arr = [];
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+			  for (var i=0;i<rows;i++) {
+			     arr[i] = [];
+			  }
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
+			  return arr;
+		}
+		parseData("data/lat-longitude.csv", doStuff);
+		function initialize() {
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Cse523 maintained by <a href="https://github.com/nikhilambekar">nikhilambekar</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
+			var mapOptions = {
+				zoom : 2,
+				center : new google.maps.LatLng(40.764213, 0.00196),
+				//tileSize : new google.maps.Size(256, 256),
+				rotateControl : false,
+				scrollwheel : false
+			//zoomControl : false,
+			//draggable : false
+			};
 
-    
+			map = new google.maps.Map(document.getElementById('map-canvas'),
+					mapOptions);
+			for (var i = 0; i < pointArray.length; i++) {
+				// Create a lat/long object readable by Google
 
-  </body>
+				
+				var marker = new google.maps.Marker({
+					position : new google.maps.LatLng(parseFloat(pointArray[i][1]),
+							parseFloat(pointArray[i][2])),
+					map: map,
+					title : pointArray[i][0]
+				});
+				(function(marker, i) {
+                    // add click event
+                    google.maps.event.addListener(marker, 'click', function() {
+                        infowindow = new google.maps.InfoWindow({
+                            content: marker.title
+                        });
+                        infowindow.open(map, marker);
+                    });
+                })(marker, i);
+				taxiData.push(marker);
+			}
+			var markerCluster = new MarkerClusterer(map, taxiData);
+
+			/* 
+			 var pointArray = new google.maps.MVCArray(taxiData);
+
+			 heatmap = new google.maps.visualization.HeatmapLayer({
+			 data : pointArray
+			 });
+			 heatmap.set('radius',5);
+
+			 heatmap.setMap(map);
+			 */}
+
+		function loadMap() {
+			/* google.maps.event.addDomListener(window, 'load', initialize); */
+			initialize();
+		}
+	</script>
+		</section>
+	</div>
+
+	<!-- FOOTER  -->
+	<div id="footer_wrap" class="outer">
+		<footer class="inner">
+			<p class="copyright">
+				Cse523 maintained by <a href="https://github.com/nikhilambekar">nikhilambekar</a>
+			</p>
+			<p>
+				Published with <a href="https://pages.github.com">GitHub Pages</a>
+			</p>
+		</footer>
+	</div>
+
+
+
+</body>
 </html>
