--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
 	margin-right: auto;
 }
 
+#sparklines {
+	display: table;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 .map {
 	background: #fff;
 	padding: 15px;
@@ -43,7 +49,8 @@
 <script type="text/javascript" src="javascripts/jquery.sparkline.min.js"></script>
 <script type="text/javascript" src="javascripts/jquery.outerhtml.js"></script>
 <script type="text/javascript" src="javascripts/papaparse.js"></script>
-<script type="text/javascript" src="javascripts/markerclusterer_compiled.js"></script>
+<script type="text/javascript"
+	src="javascripts/markerclusterer_compiled.js"></script>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script type="text/javascript" src="javascripts/stream_layers.js"></script>
 <script type="text/javascript" src="javascripts/nv.d3.js"></script>
@@ -94,102 +101,108 @@
 	<!-- MAIN CONTENT -->
 	<div id="main_content_wrap" class="outer">
 		<section id="main_content" class="inner">
-			<span class="inlinesparkline">1,4,4,7,5,9,10,4,4,7,5,9,10,4,4,7,5,9,10</span>
-	<span class="dynamicsparkline">Loading..</span>
-	<span class="dynamicbar">Loading..</span>
-	<span class="inlinebar">1,3,4,5,3,5,4,4,7,5,9,10,4,4,7,5,9,10</span>
-	<div id='chart1'>
-		<svg style='height:500px;width: 1100px;'> </svg>
-	</div>
-	<script src='javascripts/multiBar.js' type='text/javascript'>
-		
-	</script>
-	<div id='map'>
-		<div id='map-canvas'></div>
-	</div>
-	<script type="text/javascript">
-		var map, heatmap;
-		var pointArray = [[]];
-		var taxiData = new Array();
-		function doStuff(data, loadMap) {
-			pointArray = data.slice();
-			
-			loadMap();
-		}
-
-		function parseData(url, callBack) {
-			Papa.parse(url, {
-				download : true,
-				dynamicTyping : true,
-				complete : function(results) {
-					callBack(results.data, loadMap);
-				}
-			});
-		}
-		
-		function Create2DArray(rows) {
-			  var arr = [];
-
-			  for (var i=0;i<rows;i++) {
-			     arr[i] = [];
-			  }
-
-			  return arr;
-		}
-		parseData("data/lat-longitude.csv", doStuff);
-		function initialize() {
-
-			var mapOptions = {
-				zoom : 2,
-				center : new google.maps.LatLng(40.764213, 0.00196),
-				//tileSize : new google.maps.Size(256, 256),
-				rotateControl : false,
-				scrollwheel : false
-			//zoomControl : false,
-			//draggable : false
-			};
-
-			map = new google.maps.Map(document.getElementById('map-canvas'),
-					mapOptions);
-			for (var i = 0; i < pointArray.length; i++) {
-				// Create a lat/long object readable by Google
-
+			<div id='sparklines'>
+				<span class="inlinesparkline">1,4,4,7,5,9,10,4,4,7,5,9,10,4,4,7,5,9,10</span>
+				<span class="dynamicsparkline">Loading..</span> <span
+					class="dynamicbar">Loading..</span> <span class="inlinebar">1,3,4,5,3,5,4,4,7,5,9,10,4,4,7,5,9,10</span>
+			</div>
+			<div id='chart1'>
+				<svg style='height: 500px; width: 1100px;'> </svg>
+			</div>
+			<script src='javascripts/multiBar.js' type='text/javascript'>
 				
-				var marker = new google.maps.Marker({
-					position : new google.maps.LatLng(parseFloat(pointArray[i][1]),
-							parseFloat(pointArray[i][2])),
-					map: map,
-					title : pointArray[i][0]
-				});
-				(function(marker, i) {
-                    // add click event
-                    google.maps.event.addListener(marker, 'click', function() {
-                        infowindow = new google.maps.InfoWindow({
-                            content: marker.title
-                        });
-                        infowindow.open(map, marker);
-                    });
-                })(marker, i);
-				taxiData.push(marker);
-			}
-			var markerCluster = new MarkerClusterer(map, taxiData);
+			</script>
+			<div id='map'>
+				<div id='map-canvas'></div>
+			</div>
+			<script type="text/javascript">
+				var map, heatmap;
+				var pointArray = [ [] ];
+				var taxiData = new Array();
+				function doStuff(data, loadMap) {
+					pointArray = data.slice();
 
-			/* 
-			 var pointArray = new google.maps.MVCArray(taxiData);
+					loadMap();
+				}
 
-			 heatmap = new google.maps.visualization.HeatmapLayer({
-			 data : pointArray
-			 });
-			 heatmap.set('radius',5);
+				function parseData(url, callBack) {
+					Papa.parse(url, {
+						download : true,
+						dynamicTyping : true,
+						complete : function(results) {
+							callBack(results.data, loadMap);
+						}
+					});
+				}
 
-			 heatmap.setMap(map);
-			 */}
+				function Create2DArray(rows) {
+					var arr = [];
 
-		function loadMap() {
-			/* google.maps.event.addDomListener(window, 'load', initialize); */
-			initialize();
-		}
-	</script>
+					for (var i = 0; i < rows; i++) {
+						arr[i] = [];
+					}
+
+					return arr;
+				}
+				parseData("data/lat-longitude.csv", doStuff);
+				function initialize() {
+
+					var mapOptions = {
+						zoom : 2,
+						center : new google.maps.LatLng(40.764213, 0.00196),
+						//tileSize : new google.maps.Size(256, 256),
+						rotateControl : false,
+						scrollwheel : false
+					//zoomControl : false,
+					//draggable : false
+					};
+
+					map = new google.maps.Map(document
+							.getElementById('map-canvas'), mapOptions);
+					for (var i = 0; i < pointArray.length; i++) {
+						// Create a lat/long object readable by Google
+
+						var marker = new google.maps.Marker({
+							position : new google.maps.LatLng(
+									parseFloat(pointArray[i][1]),
+									parseFloat(pointArray[i][2])),
+							map : map,
+							title : pointArray[i][0]
+						});
+						(function(marker, i) {
+							// add click event
+							google.maps.event
+									.addListener(
+											marker,
+											'click',
+											function() {
+												infowindow = new google.maps.InfoWindow(
+														{
+															content : marker.title
+														});
+												infowindow.open(map, marker);
+											});
+						})(marker, i);
+						taxiData.push(marker);
+					}
+					var markerCluster = new MarkerClusterer(map, taxiData);
+
+					/* 
+					 var pointArray = new google.maps.MVCArray(taxiData);
+
+					 heatmap = new google.maps.visualization.HeatmapLayer({
+					 data : pointArray
+					 });
+					 heatmap.set('radius',5);
+
+					 heatmap.setMap(map);
+					 */}
+
+				function loadMap() {
+					/* google.maps.event.addDomListener(window, 'load', initialize); */
+					initialize();
+				}
+			</script>
 		</section>
 	</div>
 
