--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 	margin-right: auto;
 	border: 1px solid #ccc;
 	background-color: #f3f3f3;
-	margin-right: auto;
 }
 
 #chart1 {
@@ -34,6 +33,8 @@
 	display: table;
 	margin-left: auto;
 	margin-right: auto;
+	margin-top:20px;
+	margin-bottom:20px;
 }
 
 .map {
