Adding margin to scatter plot

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 					initialize();
 				}
 			</script>
-			<div id="scatter" class="centerDiv"></div>
+			<div id="scatter" class="centerDiv" style="height: 200px;"></div>
 			<script src="javascripts/punchcard.js"></script>
 		</section>
 	</div>
