Some Error Correction

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 									parseFloat(pointArray[i][1]),
 									parseFloat(pointArray[i][2])),
 							map : map,
-							title : title : "IP : "+pointArray[i][0] + "</br>"
+							title : "IP : "+pointArray[i][0] + "</br>"
 							+ "Location : "+getAddress(pointArray[i][1], pointArray[i][2])
 						});
 						(function(marker, i) {
